--- a/drought.ipynb
+++ b/drought.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "795e53de",
+   "id": "4cab268c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "245edc08",
+   "id": "29b04e71",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9be2a9ce",
+   "id": "dec668f6",
    "metadata": {},
    "outputs": [
     {
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "413fbb2e",
+   "execution_count": 84,
+   "id": "68a19871",
    "metadata": {},
    "outputs": [
     {
@@ -362,260 +362,132 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>MapDate</th>\n",
        "      <th>FIPS</th>\n",
-       "      <th>County</th>\n",
-       "      <th>State</th>\n",
        "      <th>None</th>\n",
        "      <th>D0</th>\n",
        "      <th>D1</th>\n",
        "      <th>D2</th>\n",
        "      <th>D3</th>\n",
        "      <th>D4</th>\n",
-       "      <th>ValidStart</th>\n",
-       "      <th>ValidEnd</th>\n",
        "      <th>StatisticFormatID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Year</th>\n",
+       "      <th>County</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20191231</td>\n",
-       "      <td>6001</td>\n",
-       "      <td>Alameda County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2013</th>\n",
+       "      <th>Alameda County</th>\n",
+       "      <td>2.013066e+07</td>\n",
+       "      <td>6001.0</td>\n",
+       "      <td>13.070577</td>\n",
+       "      <td>86.929423</td>\n",
+       "      <td>65.384615</td>\n",
+       "      <td>51.923077</td>\n",
+       "      <td>0.797308</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/31/2019</td>\n",
-       "      <td>1/6/2020</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2020</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20191224</td>\n",
-       "      <td>6001</td>\n",
-       "      <td>Alameda County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>Alpine County</th>\n",
+       "      <td>2.013066e+07</td>\n",
+       "      <td>6003.0</td>\n",
+       "      <td>12.923654</td>\n",
+       "      <td>87.076346</td>\n",
+       "      <td>69.559423</td>\n",
+       "      <td>48.655000</td>\n",
+       "      <td>4.884231</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/24/2019</td>\n",
-       "      <td>12/30/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20191217</td>\n",
-       "      <td>6001</td>\n",
-       "      <td>Alameda County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>Amador County</th>\n",
+       "      <td>2.013066e+07</td>\n",
+       "      <td>6005.0</td>\n",
+       "      <td>16.524808</td>\n",
+       "      <td>83.475192</td>\n",
+       "      <td>65.408462</td>\n",
+       "      <td>51.923077</td>\n",
+       "      <td>11.498077</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/17/2019</td>\n",
-       "      <td>12/23/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20191210</td>\n",
-       "      <td>6001</td>\n",
-       "      <td>Alameda County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>100.0</td>\n",
+       "      <th>Butte County</th>\n",
+       "      <td>2.013066e+07</td>\n",
+       "      <td>6007.0</td>\n",
+       "      <td>15.985962</td>\n",
+       "      <td>84.014038</td>\n",
+       "      <td>65.384615</td>\n",
+       "      <td>51.923077</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/10/2019</td>\n",
-       "      <td>12/16/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2019</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20191203</td>\n",
-       "      <td>6001</td>\n",
-       "      <td>Alameda County</td>\n",
-       "      <td>CA</td>\n",
+       "      <th>Calaveras County</th>\n",
+       "      <td>2.013066e+07</td>\n",
+       "      <td>6009.0</td>\n",
+       "      <td>14.062500</td>\n",
+       "      <td>85.937500</td>\n",
+       "      <td>69.140769</td>\n",
+       "      <td>53.212500</td>\n",
+       "      <td>11.538462</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/3/2019</td>\n",
-       "      <td>12/9/2019</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21176</th>\n",
-       "      <td>20131224</td>\n",
-       "      <td>6115</td>\n",
-       "      <td>Yuba County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/24/2013</td>\n",
-       "      <td>12/30/2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21177</th>\n",
-       "      <td>20131217</td>\n",
-       "      <td>6115</td>\n",
-       "      <td>Yuba County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/17/2013</td>\n",
-       "      <td>12/23/2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21178</th>\n",
-       "      <td>20131210</td>\n",
-       "      <td>6115</td>\n",
-       "      <td>Yuba County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/10/2013</td>\n",
-       "      <td>12/16/2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21179</th>\n",
-       "      <td>20131203</td>\n",
-       "      <td>6115</td>\n",
-       "      <td>Yuba County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12/3/2013</td>\n",
-       "      <td>12/9/2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21180</th>\n",
-       "      <td>20131126</td>\n",
-       "      <td>6115</td>\n",
-       "      <td>Yuba County</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11/26/2013</td>\n",
-       "      <td>12/2/2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2088 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        MapDate  FIPS          County State   None     D0     D1     D2   D3  \\\n",
-       "0      20191231  6001  Alameda County    CA  100.0    0.0    0.0    0.0  0.0   \n",
-       "1      20191224  6001  Alameda County    CA  100.0    0.0    0.0    0.0  0.0   \n",
-       "2      20191217  6001  Alameda County    CA  100.0    0.0    0.0    0.0  0.0   \n",
-       "3      20191210  6001  Alameda County    CA  100.0    0.0    0.0    0.0  0.0   \n",
-       "4      20191203  6001  Alameda County    CA    0.0  100.0    0.0    0.0  0.0   \n",
-       "...         ...   ...             ...   ...    ...    ...    ...    ...  ...   \n",
-       "21176  20131224  6115     Yuba County    CA    0.0  100.0  100.0  100.0  0.0   \n",
-       "21177  20131217  6115     Yuba County    CA    0.0  100.0  100.0  100.0  0.0   \n",
-       "21178  20131210  6115     Yuba County    CA    0.0  100.0  100.0  100.0  0.0   \n",
-       "21179  20131203  6115     Yuba County    CA    0.0  100.0  100.0  100.0  0.0   \n",
-       "21180  20131126  6115     Yuba County    CA    0.0  100.0  100.0  100.0  0.0   \n",
+       "                            MapDate    FIPS       None         D0         D1  \\\n",
+       "Year County                                                                    \n",
+       "2013 Alameda County    2.013066e+07  6001.0  13.070577  86.929423  65.384615   \n",
+       "     Alpine County     2.013066e+07  6003.0  12.923654  87.076346  69.559423   \n",
+       "     Amador County     2.013066e+07  6005.0  16.524808  83.475192  65.408462   \n",
+       "     Butte County      2.013066e+07  6007.0  15.985962  84.014038  65.384615   \n",
+       "     Calaveras County  2.013066e+07  6009.0  14.062500  85.937500  69.140769   \n",
        "\n",
-       "        D4  ValidStart    ValidEnd  StatisticFormatID  Year  \n",
-       "0      0.0  12/31/2019    1/6/2020                  1  2020  \n",
-       "1      0.0  12/24/2019  12/30/2019                  1  2019  \n",
-       "2      0.0  12/17/2019  12/23/2019                  1  2019  \n",
-       "3      0.0  12/10/2019  12/16/2019                  1  2019  \n",
-       "4      0.0   12/3/2019   12/9/2019                  1  2019  \n",
-       "...    ...         ...         ...                ...   ...  \n",
-       "21176  0.0  12/24/2013  12/30/2013                  1  2013  \n",
-       "21177  0.0  12/17/2013  12/23/2013                  1  2013  \n",
-       "21178  0.0  12/10/2013  12/16/2013                  1  2013  \n",
-       "21179  0.0   12/3/2013   12/9/2013                  1  2013  \n",
-       "21180  0.0  11/26/2013   12/2/2013                  1  2013  \n",
-       "\n",
-       "[2088 rows x 14 columns]"
+       "                              D2         D3   D4  StatisticFormatID  \n",
+       "Year County                                                          \n",
+       "2013 Alameda County    51.923077   0.797308  0.0                1.0  \n",
+       "     Alpine County     48.655000   4.884231  0.0                1.0  \n",
+       "     Amador County     51.923077  11.498077  0.0                1.0  \n",
+       "     Butte County      51.923077   0.000000  0.0                1.0  \n",
+       "     Calaveras County  53.212500  11.538462  0.0                1.0  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Group df by year and county, and take the average of each drought index column\n",
-    "drought_filtered = drought.groupby(['Year', 'County'])\n",
-    "drought_filtered.head()"
+    "drought_filtered = drought.groupby(['Year', 'County']).mean()\n",
+    "drought_filtered.head()\n",
+    "drought_ave = pd.DataFrame(drought_filtered)\n",
+    "drought_ave.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "e2f4921f",
+   "id": "99b1fb1f",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5804a5a2",
+   "id": "5f251599",
    "metadata": {},
    "outputs": [],
    "source": []
