--- a/drought.ipynb
+++ b/drought.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "5d0b8eb2",
+   "execution_count": 1,
+   "id": "29e67d1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-45e435e6cede>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Census & gmaps API Keys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+     ]
+    }
+   ],
    "source": [
     "#Import dependencies\n",
     "import pandas as pd\n",
@@ -20,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "5488aaa3",
+   "id": "8dd4edc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd5436b5",
+   "id": "ba9ad8c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ff05a299",
+   "id": "7582fdf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "388e1fec",
+   "id": "915aca52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18d3c927",
+   "id": "7a239740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "01f7df99",
+   "id": "ec0b3205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d60530dc",
+   "id": "4d76980f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "d7ecd1d8",
+   "id": "9da79fb0",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "8ebca048",
+   "id": "38703cbd",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "f85b6909",
+   "id": "c0a22d2f",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "4b6c0561",
+   "id": "4ae58d7a",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "d7c24b12",
+   "id": "20cb57dd",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "fdf84ee9",
+   "id": "18d8f445",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "fa08966e",
+   "id": "26f811e3",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "5bb799ac",
+   "id": "0704ebac",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "df66ec14",
+   "id": "5a1dcad5",
    "metadata": {
     "scrolled": true
    },
@@ -1321,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "f7f3a07a",
+   "id": "1876ebbf",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22012be7",
+   "id": "6bbc33cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3349a94b",
+   "id": "ce04e035",
    "metadata": {},
    "outputs": [],
    "source": []
