--- a/wildfire_analysis/WildFireAnalysis.ipynb
+++ b/wildfire_analysis/WildFireAnalysis.ipynb
@@ -576,12 +576,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "source": [
-    "fire_filtered = fire_df.groupby(['Year', 'County']).mean()\r\n",
+    "fire_filtered = fire_df.groupby(['County', 'Year']).sum()\r\n",
     "\r\n",
     "fire_filtered = pd.DataFrame(fire_filtered)\r\n",
-    "fire_filtered.head()"
+    "fire_filtered"
    ],
    "outputs": [
     {
@@ -610,56 +610,91 @@
        "      <th>Acres Burned</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Year</th>\n",
        "      <th>County</th>\n",
+       "      <th>Year</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2013</th>\n",
-       "      <th>Alameda</th>\n",
-       "      <td>119.500000</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Alameda</th>\n",
+       "      <th>2013</th>\n",
+       "      <td>478.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Amador</th>\n",
-       "      <td>96.000000</td>\n",
+       "      <th>2015</th>\n",
+       "      <td>3340.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Butte</th>\n",
-       "      <td>494.142857</td>\n",
+       "      <th>2016</th>\n",
+       "      <td>211.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Calaveras</th>\n",
-       "      <td>38.500000</td>\n",
+       "      <th>2017</th>\n",
+       "      <td>537.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Colusa</th>\n",
-       "      <td>28.000000</td>\n",
+       "      <th>2018</th>\n",
+       "      <td>1288.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Yuba</th>\n",
+       "      <th>2013</th>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>10981.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>268.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>333 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Acres Burned\n",
-       "Year County                 \n",
-       "2013 Alameda      119.500000\n",
-       "     Amador        96.000000\n",
-       "     Butte        494.142857\n",
-       "     Calaveras     38.500000\n",
-       "     Colusa        28.000000"
+       "              Acres Burned\n",
+       "County  Year              \n",
+       "Alameda 2013         478.0\n",
+       "        2015        3340.0\n",
+       "        2016         211.0\n",
+       "        2017         537.0\n",
+       "        2018        1288.0\n",
+       "...                    ...\n",
+       "Yuba    2013          73.0\n",
+       "        2015         188.0\n",
+       "        2016         400.0\n",
+       "        2017       10981.0\n",
+       "        2019         268.0\n",
+       "\n",
+       "[333 rows x 1 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 31
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "source": [
     "census_csv = '../data_files/drought_census_2010_2019.csv'\r\n",
     "\r\n",
@@ -832,14 +867,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 32
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "source": [
     "# Create data frame from csv census\r\n",
     "\r\n",
@@ -928,7 +963,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 33
     }
    ],
    "metadata": {}
@@ -957,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "source": [
     "census_df.County = county_list\r\n",
     "census_df.head()"
@@ -1035,14 +1070,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 36
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "source": [
     "census_filtered = census_df.groupby(['Year', 'County']).mean()\r\n",
     "\r\n",
@@ -1118,14 +1153,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 37
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "source": [
     "# Merge two data frames\r\n",
     "\r\n",
@@ -1171,29 +1206,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2013</th>\n",
+       "      <th>2013</th>\n",
        "      <th>Alameda</th>\n",
-       "      <td>119.500000</td>\n",
+       "      <td>478.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Amador</th>\n",
-       "      <td>96.000000</td>\n",
+       "      <th>2015</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>3340.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Butte</th>\n",
-       "      <td>494.142857</td>\n",
+       "      <th>2016</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>211.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Calaveras</th>\n",
-       "      <td>38.500000</td>\n",
+       "      <th>2017</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>537.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Colusa</th>\n",
-       "      <td>28.000000</td>\n",
+       "      <th>2018</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>1288.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1201,24 +1240,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                Acres Burned  Poverty Rate\n",
-       "Year County                               \n",
-       "2013 Alameda      119.500000           NaN\n",
-       "     Amador        96.000000           NaN\n",
-       "     Butte        494.142857           NaN\n",
-       "     Calaveras     38.500000           NaN\n",
-       "     Colusa        28.000000           NaN"
+       "              Acres Burned  Poverty Rate\n",
+       "Year County                             \n",
+       "2013 Alameda         478.0           NaN\n",
+       "2015 Alameda        3340.0           NaN\n",
+       "2016 Alameda         211.0           NaN\n",
+       "2017 Alameda         537.0           NaN\n",
+       "2018 Alameda        1288.0           NaN"
       ]
      },
      "metadata": {},
-     "execution_count": 261
+     "execution_count": 38
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "source": [
     "merged_df.to_csv('../data_files/wilfire_poverty.csv')\r\n",
     "merged_df.head()"
@@ -1259,29 +1298,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2013</th>\n",
+       "      <th>2013</th>\n",
        "      <th>Alameda</th>\n",
-       "      <td>119.500000</td>\n",
+       "      <td>478.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Amador</th>\n",
-       "      <td>96.000000</td>\n",
+       "      <th>2015</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>3340.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Butte</th>\n",
-       "      <td>494.142857</td>\n",
+       "      <th>2016</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>211.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Calaveras</th>\n",
-       "      <td>38.500000</td>\n",
+       "      <th>2017</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>537.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Colusa</th>\n",
-       "      <td>28.000000</td>\n",
+       "      <th>2018</th>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>1288.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1289,17 +1332,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                Acres Burned  Poverty Rate\n",
-       "Year County                               \n",
-       "2013 Alameda      119.500000           NaN\n",
-       "     Amador        96.000000           NaN\n",
-       "     Butte        494.142857           NaN\n",
-       "     Calaveras     38.500000           NaN\n",
-       "     Colusa        28.000000           NaN"
+       "              Acres Burned  Poverty Rate\n",
+       "Year County                             \n",
+       "2013 Alameda         478.0           NaN\n",
+       "2015 Alameda        3340.0           NaN\n",
+       "2016 Alameda         211.0           NaN\n",
+       "2017 Alameda         537.0           NaN\n",
+       "2018 Alameda        1288.0           NaN"
       ]
      },
      "metadata": {},
-     "execution_count": 257
+     "execution_count": 39
     }
    ],
    "metadata": {}
