--- a/Kevin/uscencsus.ipynb
+++ b/Kevin/uscencsus.ipynb
@@ -18,18 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "cb2c61b5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2010\n",
     "c = Census(api_key, year=2010)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
     "                          \"B17001_002E\"), {'for':'county:*','in':'state:06'})\n",
-    "\n",
     "# Convert to DataFrame\n",
     "census_pd = pd.DataFrame(census_data)\n",
     "\n",
@@ -56,21 +55,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2010'\n",
-    "\n",
     "census_2010 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6a5ad191",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2011\n",
     "c = Census(api_key, year=2011)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -104,21 +101,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2011'\n",
-    "\n",
     "census_2011 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "a3eb0a7c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2012\n",
     "c = Census(api_key, year=2012)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -152,21 +147,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2012'\n",
-    "\n",
     "census_2012 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "6c630f7d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2013\n",
     "c = Census(api_key, year=2013)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -200,21 +193,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2013'\n",
-    "\n",
     "census_2013 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1cd798d3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2014\n",
     "c = Census(api_key, year=2014)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -248,21 +239,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2014'\n",
-    "\n",
     "census_2014 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "82d341a1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2015\n",
     "c = Census(api_key, year=2015)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -296,21 +285,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2015'\n",
-    "\n",
     "census_2015 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "213f47f5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2016\n",
     "c = Census(api_key, year=2016)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -344,19 +331,18 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2016'\n",
-    "\n",
     "census_2016 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "26235eac",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2017\n",
     "c = Census(api_key, year=2017)\n",
     "\n",
     "# Run Census Search to retrieve data on all states\n",
@@ -392,19 +378,18 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2017'\n",
-    "\n",
     "census_2017 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "53b1d186",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2018\n",
     "c = Census(api_key, year=2018)\n",
     "\n",
     "# Run Census Search to retrieve data on all states\n",
@@ -440,21 +425,19 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2018'\n",
-    "\n",
     "census_2018 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "713bf96c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Retrive census data for 2019\n",
     "c = Census(api_key, year=2019)\n",
-    "\n",
     "# Run Census Search to retrieve data on all states\n",
     "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
@@ -488,40 +471,22 @@
     "        int) / census_pd[\"Population\"].astype(int)\n",
     "\n",
     "#Add year column\n",
-    "\n",
     "census_pd['Year'] = '2019'\n",
-    "\n",
     "census_2019 = census_pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "e0df99ca",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge all data frames from 2010 to 2019 and save as .csv format\n",
     "frames = [census_2010, census_2011, census_2012, census_2013, census_2014, census_2015, census_2016, census_2017, census_2018, census_2019]\n",
-    "census_megered = pd.concat(frames)"
+    "census_megered = pd.concat(frames)\n",
+    "census_megered.to_csv('out_put/Census_10_19.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "2ee7d0f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "census_megered.to_csv('/Users/vilaysackkhonsavanh/UCSD_ASSIGNMENTS/Project_1/Kevin/Census_2010_19.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b82636a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
