--- a/Melina/wildfire_analysis/WildFireAnalysis.ipynb
+++ b/Melina/wildfire_analysis/WildFireAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 35,
    "source": [
     "import pandas as pd \r\n",
     "import matplotlib as plt\r\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 36,
    "source": [
     "# Read the wildfire csv and display\r\n",
     "fire_data = pd.read_csv(wildfire_data)\r\n",
@@ -259,14 +259,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 286
+     "execution_count": 36
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 37,
    "source": [
     "wildfire_df = fire_data[['ArchiveYear', 'Counties', 'AcresBurned']]\r\n",
     "wildfire_df.head()"
@@ -344,20 +344,20 @@
       ]
      },
      "metadata": {},
-     "execution_count": 287
+     "execution_count": 37
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 38,
    "source": [
     "# Create data frame from csv data\r\n",
     "\r\n",
-    "fireyear = final_fire_data['ArchiveYear']\r\n",
-    "acres = final_fire_data['AcresBurned']\r\n",
-    "county = final_fire_data['Counties']\r\n",
+    "fireyear = wildfire_df['ArchiveYear']\r\n",
+    "acres = wildfire_df['AcresBurned']\r\n",
+    "county = wildfire_df['Counties']\r\n",
     "\r\n",
     "wildfire_df = pd.DataFrame({\r\n",
     "    'Year' : fireyear,\r\n",
@@ -485,14 +485,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 288
+     "execution_count": 38
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 39,
    "source": [
     "x = wildfire_df['Year']\r\n",
     "y = wildfire_df['Acres Burned']\r\n",
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 40,
    "source": [
     "# Create csv to generate pivot table and pull values for statistical analysis\r\n",
     "\r\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 41,
    "source": [
     "year_fire = [2013, 2014, 2015, 2016, 2017, 2018, 2019]\r\n",
     "sum_acres = [527745, 448715, 574503, 505927, 1793915, 3358049, 285708]"
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 42,
    "source": [
     "plt.title(\"Sum of Acres of Fires in California (2013 - 2019)\")\r\n",
     "plt.xlabel(\"Year\")\r\n",
@@ -574,9 +574,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 43,
    "source": [
-    "fire_filtered = fire_df.groupby(['Year', 'County']).sum()\r\n",
+    "fire_filtered = wildfire_df.groupby(['Year', 'County']).sum()\r\n",
     "\r\n",
     "fire_filtered = pd.DataFrame(fire_filtered)\r\n",
     "fire_filtered"
@@ -685,14 +685,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 293
+     "execution_count": 43
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 44,
    "source": [
     "census_csv = '../data_files/drought_census_2013_2019.csv'\r\n",
     "\r\n",
@@ -865,14 +865,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 294
+     "execution_count": 44
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 45,
    "source": [
     "# Create data frame from csv census\r\n",
     "\r\n",
@@ -961,14 +961,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 295
+     "execution_count": 45
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 46,
    "source": [
     "# Remove the word 'County' from the County column\r\n",
     "\r\n",
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 47,
    "source": [
     "county_list = [x.rstrip('County') for x in county_list]\r\n"
    ],
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 48,
    "source": [
     "census_df.County = county_list\r\n",
     "census_df.head()"
@@ -1066,14 +1066,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 298
+     "execution_count": 48
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 49,
    "source": [
     "# Create csv to generate pivot table and pull values for statistical analysis\r\n",
     "\r\n",
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 50,
    "source": [
     "year = [2013, 2014, 2015, 2016, 2017, 2018, 2019]\r\n",
     "rate = [15.86, 16.18, 16.10, 15.70, 15.23, 14.55, 14.00]"
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 51,
    "source": [
     "plt.title(\"Average Poverty Rate of Coutnies in California (2013 - 2019)\")\r\n",
     "plt.xlabel(\"Year\")\r\n",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 52,
    "source": [
     "census_filtered = census_df.groupby(['Year', 'County']).sum()\r\n",
     "\r\n",
@@ -1233,18 +1233,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 302
+     "execution_count": 52
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 53,
    "source": [
     "# Merge two data frames\r\n",
     "\r\n",
-    "merged_df = pd.merge(fire_df, census_df, how = 'outer', on = ['Year', 'County'])\r\n",
+    "merged_df = pd.merge(wildfire_df, census_df, how = 'outer', on = ['Year', 'County'])\r\n",
     "merged_df.dropna()\r\n",
     "merged_df.head()"
    ],
@@ -1272,8 +1272,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>Acres Burned</th>\n",
        "      <th>County</th>\n",
+       "      <th>Acres Burned</th>\n",
        "      <th>Poverty Rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1281,36 +1281,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2013</td>\n",
-       "      <td>257314.0</td>\n",
        "      <td>Tuolumne</td>\n",
+       "      <td>257314.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013</td>\n",
-       "      <td>1070.0</td>\n",
        "      <td>Tuolumne</td>\n",
+       "      <td>1070.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2013</td>\n",
-       "      <td>100.0</td>\n",
        "      <td>Tuolumne</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2013</td>\n",
-       "      <td>30274.0</td>\n",
        "      <td>Los Angeles</td>\n",
+       "      <td>30274.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013</td>\n",
-       "      <td>712.0</td>\n",
        "      <td>Los Angeles</td>\n",
+       "      <td>712.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1318,16 +1318,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year  Acres Burned       County  Poverty Rate\n",
-       "0  2013      257314.0     Tuolumne           NaN\n",
-       "1  2013        1070.0     Tuolumne           NaN\n",
-       "2  2013         100.0     Tuolumne           NaN\n",
-       "3  2013       30274.0  Los Angeles           NaN\n",
-       "4  2013         712.0  Los Angeles           NaN"
+       "   Year       County  Acres Burned  Poverty Rate\n",
+       "0  2013     Tuolumne      257314.0           NaN\n",
+       "1  2013     Tuolumne        1070.0           NaN\n",
+       "2  2013     Tuolumne         100.0           NaN\n",
+       "3  2013  Los Angeles       30274.0           NaN\n",
+       "4  2013  Los Angeles         712.0           NaN"
       ]
      },
      "metadata": {},
-     "execution_count": 303
+     "execution_count": 53
     }
    ],
    "metadata": {}
