--- a/Katlin/Max_Temp.ipynb
+++ b/Katlin/Max_Temp.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c99433f0",
+   "id": "0ae69e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a3c4480",
+   "id": "78e7a0f1",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d2d0fa1",
+   "id": "aa5ee67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "955e4bed",
+   "id": "428af676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "739d96c7",
+   "id": "72db9ff3",
    "metadata": {},
    "outputs": [
     {
@@ -346,20 +346,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0b5cff80",
+   "execution_count": 22,
+   "id": "2cd39604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>County</th>\n",
+       "      <th>None</th>\n",
+       "      <th>D0</th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "      <th>D3</th>\n",
+       "      <th>D4</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Household Income</th>\n",
+       "      <th>Per Capita Income</th>\n",
+       "      <th>Poverty Count</th>\n",
+       "      <th>Poverty Rate</th>\n",
+       "      <th>Location ID</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Temp (F)</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Anomaly (1901-2000 base period)</th>\n",
+       "      <th>1901-2000 Mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Alameda County</td>\n",
+       "      <td>84.000192</td>\n",
+       "      <td>15.999808</td>\n",
+       "      <td>2.624615</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69384.0</td>\n",
+       "      <td>33961.0</td>\n",
+       "      <td>165417.0</td>\n",
+       "      <td>11.192100</td>\n",
+       "      <td>CA-001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>81.8</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>82.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Alpine County</td>\n",
+       "      <td>87.179423</td>\n",
+       "      <td>12.820577</td>\n",
+       "      <td>1.116154</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63478.0</td>\n",
+       "      <td>32159.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>12.329932</td>\n",
+       "      <td>CA-003</td>\n",
+       "      <td>12</td>\n",
+       "      <td>75.7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Amador County</td>\n",
+       "      <td>92.307692</td>\n",
+       "      <td>7.692308</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54758.0</td>\n",
+       "      <td>26329.0</td>\n",
+       "      <td>2720.0</td>\n",
+       "      <td>7.096825</td>\n",
+       "      <td>CA-005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>90.8</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>90.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Butte County</td>\n",
+       "      <td>70.173462</td>\n",
+       "      <td>29.826538</td>\n",
+       "      <td>6.780385</td>\n",
+       "      <td>0.676346</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43170.0</td>\n",
+       "      <td>23404.0</td>\n",
+       "      <td>39290.0</td>\n",
+       "      <td>17.970590</td>\n",
+       "      <td>CA-007</td>\n",
+       "      <td>12</td>\n",
+       "      <td>92.7</td>\n",
+       "      <td>85</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>92.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>62</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Calaveras County</td>\n",
+       "      <td>93.010000</td>\n",
+       "      <td>6.990000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54971.0</td>\n",
+       "      <td>28408.0</td>\n",
+       "      <td>3773.0</td>\n",
+       "      <td>8.203244</td>\n",
+       "      <td>CA-009</td>\n",
+       "      <td>12</td>\n",
+       "      <td>91.5</td>\n",
+       "      <td>85</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>91.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Year            County       None         D0        D1  \\\n",
+       "0          58  2010    Alameda County  84.000192  15.999808  2.624615   \n",
+       "1          59  2010     Alpine County  87.179423  12.820577  1.116154   \n",
+       "2          60  2010     Amador County  92.307692   7.692308  0.000000   \n",
+       "3          61  2010      Butte County  70.173462  29.826538  6.780385   \n",
+       "4          62  2010  Calaveras County  93.010000   6.990000  0.000000   \n",
+       "\n",
+       "         D2   D3   D4  Unnamed: 0.1  ...  Household Income  Per Capita Income  \\\n",
+       "0  0.000000  0.0  0.0          35.0  ...           69384.0            33961.0   \n",
+       "1  0.000000  0.0  0.0          36.0  ...           63478.0            32159.0   \n",
+       "2  0.000000  0.0  0.0          37.0  ...           54758.0            26329.0   \n",
+       "3  0.676346  0.0  0.0          38.0  ...           43170.0            23404.0   \n",
+       "4  0.000000  0.0  0.0          39.0  ...           54971.0            28408.0   \n",
+       "\n",
+       "   Poverty Count  Poverty Rate  Location ID  Month Temp (F)  Rank  \\\n",
+       "0       165417.0     11.192100       CA-001     12     81.8    96   \n",
+       "1          145.0     12.329932       CA-003     12     75.7   100   \n",
+       "2         2720.0      7.096825       CA-005     12     90.8    93   \n",
+       "3        39290.0     17.970590       CA-007     12     92.7    85   \n",
+       "4         3773.0      8.203244       CA-009     12     91.5    85   \n",
+       "\n",
+       "   Anomaly (1901-2000 base period)  1901-2000 Mean  \n",
+       "0                              1.8            82.3  \n",
+       "1                              2.6            75.0  \n",
+       "2                              2.2            90.4  \n",
+       "3                              2.2            92.3  \n",
+       "4                              1.6            91.2  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Merge census and temp data\n",
     "merged_df = pd.merge(drought_df, df, how=\"outer\", on = ['Year', 'County'])\n",
-    "merged_df.reset_index()"
+    "merged_df.reset_index()\n",
+    "merged_df.to_csv('drought_temp_census_2010_2019.csv')\n",
+    "merged_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "954daf23",
+   "id": "291bdb18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c602c1c3",
+   "execution_count": 20,
+   "id": "23d5927e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5705ac1c",
+   "id": "3034a569",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6578d8bd",
+   "id": "aea557f7",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "93c303b0",
+   "id": "6d765b60",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "72a2c777",
+   "id": "061e6b5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1516b2f5",
+   "id": "6e1cf682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0b27dcb8",
+   "id": "adbbc220",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3372282",
+   "id": "258d5bf0",
    "metadata": {},
    "outputs": [],
    "source": []
